# Guide-Jupyter_Notebooks

./: README.md
chapters/0-Setup/: README.md  pyproject.toml
chapters/1-Notebook/: README.md  pyproject.toml
chapters/1-Notebook/examples/: My_Favorite_Places.ipynb
chapters/2-Dependancies/: README.md
chapters/2-Dependencies/: README.md  pyproject.toml
chapters/2-Dependencies/examples/: My_Favorite_Places.ipynb
